# moveit_gpd_pick_object

./: CMakeLists.txt  package.xml
launch/: classifier_15channels.launch  gpd_pick_object_service.launch  pick_object_loop.launch  pick_object_loop_demo.launch  pick_single_object.launch  ur5_geometry.launch
launch/gpd/: gpd.launch  ur5_geometry.launch
src/: examine_grasps.cpp  fuse_pcl.cpp  pick_object.cpp  pick_object_demo.cpp  plan_grasps_service.cpp
