<?xml version="1.0"?>
<package>
  <name>moveit_gpd_pick_object</name>
  <version>0.0.0</version>
  <description>This package is a demonstration of how to use the grasps published by gpd with moveit to grasp objects. </description>

  <maintainer email="2scholz@informatik.uni-hamburg.de">Benjamin Scholz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gpd</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ros_pcl</build_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gpd</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ros_pcl</run_depend>

</package>
